Se creó con Colab

--- a/Santiago_Perez_Puerta.ipynb
+++ b/Santiago_Perez_Puerta.ipynb
@@ -462,9 +462,24 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1G9FNxLAx7gb"
+        "id": "1G9FNxLAx7gb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b12f6947-101e-4c72-fa4a-a138e7a79e5c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una palabra para decodificar\n",
+            "holo \n",
+            "Codificación:7FBF \n",
+            "Decodificación:holo \n"
+          ]
+        }
+      ],
       "source": [
         "# %% Codigo Secreto\n",
         "s = input(\"Ingrese una palabra para decodificar\\n\").lower()\n",
@@ -1403,6 +1418,132 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# %% El encriptador de David 🦒\n",
+        "def encriptador_David(palabra):\n",
+        "  alfabeto_latino = 'abcdefghijklmnñopqrstuvwxyz'\n",
+        "\n",
+        "  palabra_encriptada = palabra[0]\n",
+        "\n",
+        "  for letra in palabra[1:]:\n",
+        "    posicion_letra_alfabeto = alfabeto_latino.index(letra)\n",
+        "    posicion_encriptada = posicion_letra_alfabeto + palabra.index(letra)\n",
+        "    largo_alfabeto = len(alfabeto_latino)\n",
+        "\n",
+        "    if (posicion_letra_alfabeto != largo_alfabeto -1) and (posicion_encriptada <= largo_alfabeto -1):\n",
+        "      palabra_encriptada += alfabeto_latino[posicion_encriptada]\n",
+        "\n",
+        "  return palabra_encriptada\n",
+        "#-------------------------------------------------------------------------------\n",
+        "\n",
+        "# %% main\n",
+        "frase = input('Escriba la frase a encriptar:\\n').lower().replace('.','').replace(',','').split(' ')\n",
+        "frase_encriptada = ''\n",
+        "\n",
+        "for palabra in frase:\n",
+        "  if len(palabra) > 1:\n",
+        "    frase_encriptada += ' '+ encriptador_David(palabra)\n",
+        "  else:\n",
+        "    frase_encriptada += ' '+palabra\n",
+        "\n",
+        "frase_encriptada = frase_encriptada[1:]\n",
+        "\n",
+        "print(f'\\n{frase_encriptada}')"
+      ],
+      "metadata": {
+        "id": "wVNyj72PvvBG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# %% Calculador de factores primos\n",
+        "def primo(numero:int)-> bool:\n",
+        "  '''\n",
+        "  Esta función verifica si un numero es primo\n",
+        "  '''\n",
+        "\n",
+        "  if numero < 2: return False\n",
+        "\n",
+        "  raiz_de_numero = int((numero)**0.5)+1\n",
+        "\n",
+        "  for n in range(2,raiz_de_numero):\n",
+        "      if numero % n == 0:\n",
+        "        return False\n",
+        "  return True\n",
+        "\n",
+        "def generador_de_primos(numero:int) -> list:\n",
+        "  '''\n",
+        "  Devuelve una lista con todos los numeros primos menores\n",
+        "  o iguales que el parametro Ingresado.\n",
+        "  '''\n",
+        "\n",
+        "  numeros_primos = []\n",
+        "\n",
+        "  for i in range(numero+1):\n",
+        "    if primo(i):\n",
+        "      numeros_primos.append(i)\n",
+        "\n",
+        "  return numeros_primos\n",
+        "\n",
+        "def calcular_factores_primos(numero:int) -> list:\n",
+        "  '''\n",
+        "  Calcula los factores primos del numero ingresado como parametro.\n",
+        "  '''\n",
+        "  factores_primos = []\n",
+        "\n",
+        "  if numero == 0: return 'El cero no tiene factores primos.'\n",
+        "\n",
+        "  numeros_primos = generador_de_primos(numero)\n",
+        "\n",
+        "  if numero == 1:\n",
+        "    return numero\n",
+        "\n",
+        "  else:\n",
+        "    factor = 2\n",
+        "\n",
+        "    while numero != 1:\n",
+        "      if (factor in numeros_primos) and (numero % factor == 0):\n",
+        "        factores_primos.append(factor)\n",
+        "        numero = numero/factor\n",
+        "      else:\n",
+        "        factor += 1\n",
+        "\n",
+        "  return factores_primos\n",
+        "\n",
+        "from numpy import prod\n",
+        "from random import randint\n",
+        "\n",
+        "numero = randint(0,100)\n",
+        "a = calcular_factores_primos(numero)\n",
+        "\n",
+        "print(f'Estos son los factores primos de {numero}:\\n{a}\\n\\nComrpocavión:{prod(a)}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RUAyP26XvTds",
+        "outputId": "8675a15d-d028-4332-a841-269fd8d952c2"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estos son los factores primos de 36:\n",
+            "[2, 2, 3, 3]\n",
+            "\n",
+            "Comrpocavión:36\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
