--- a/U_de_A_Fund_de_Computacion_Taller_3/20_Tinanic_1.ipynb
+++ b/U_de_A_Fund_de_Computacion_Taller_3/20_Tinanic_1.ipynb
@@ -1314,7 +1314,8 @@
     }
    ],
    "source": [
-    "titanic_df['survived'].value_counts(normalize=True).plot(kind='pie', autopct='%1.1f%%', labels= ['Fallecidos', 'Sobrevivientes'])\n",
+    "titanic_df['survived'].value_counts(normalize=True).plot(kind='pie', autopct='%1.1f%%',\n",
+    "                                                          labels= ['Fallecidos', 'Sobrevivientes'])\n",
     "plt.title('Tasa de mortalidad y supervivencia')\n",
     "plt.ylabel('')\n",
     "plt.show()"
